EYQB-1565: Fix gap issues

--- a/src/Dfe.EarlyYearsQualification.Web/wwwroot/css/site.css
+++ b/src/Dfe.EarlyYearsQualification.Web/wwwroot/css/site.css
@@ -143,11 +143,11 @@ ol.govuk-list.govuk-list--number ol.govuk-list.govuk-list--number {
 }
 
 .post-heading-wrapper {
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 }
 
 .various-ao-content-wrapper {
-    margin: 40px 0;
+    margin: 30px 0;
 }
 
 /* Resize  3 column summary list */
